--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,9 +1,9 @@
-FROM alpine:3.12
+FROM debian:buster
 
 LABEL maintainer="ehautefa@student.42.fr"
 
 RUN 	apt update -y \
-		&& apt install -y mariadb \
+		&& apt install -y mariadb-server \
 		&& apt clean -y
 
 EXPOSE 9000
