--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,10 +1,15 @@
-FROM alpine:3.12
+FROM debian:buster
 
 LABEL maintainer="ehautefa@student.42.fr"
 
-RUN 	apt install -y nginx \
+RUN 	apt update -y \
 		&& apt install -y nginx \
 		&& apt clean -y
 
 EXPOSE 9000
+
+COPY ./conf/nginx.conf /etc/nginx/sites-available/0wordpress
+RUN ln -s /etc/nginx/sites-available/0wordpress /etc/nginx/sites-enabled/
+
+# run
 
