--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -22,3 +22,9 @@ RUN chmod +x /usr/local/bin/wp
 #Add wordpress
 ADD ./tools/wordpress-5.7.2-fr_FR.tar.gz ./tmp/wordpress
 # ADD ./tools/wordpress.sql ./tmp/wordpress.sql
+
+#create sql database
+ADD ./tools/create_database.sh /usr/local/bin/create_database.sh
+RUN chmod 755 /usr/local/bin/create_database.sh
+
+CMD ["./usr/local/bin/create_database.sh"]
