mysql_didn't_start

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,11 +2,50 @@ version: "3"
 services:
   mysql:
     build: ./requirements/mariadb
+    container_name: MariaDB
+    restart: unless-stopped
+    env_file: .env
     volumes:
         - ./home/ehautefa/data/mysql:/var/lib/mysql
     environment: 
-      MYSQL_ROOT_PASSWORD: pass
       MYSQL_DATABASE: wordpress
-      MYSQL_USER: ehautefa
-      MYSQL_PASSWORD: pass2
-    restart: always
+    networks:
+      - app-network
+  wordpress :
+    depends_on: 
+      - mysql
+    build: ./requirements/wordpress
+    container_name: wordpress
+    restart: unless-stopped
+    env_file: .env
+    environment: 
+      - WORDPRESS_DB_HOST=db:3306
+      - WORDPRESS_DB_USER=$MYSQL_USER
+      - WORDPRESS_DB_PASSWORD=$MYSQL_PASSWORD
+      - WORDPRESS_DB_NAME=wordpress
+    volumes:
+      - ./home/ehautefa/data/wordpress:/var/www/html
+    networks: 
+      - app-network
+  webserver:
+    depends_on: 
+      - wordpress
+    build: ./requirements/nginx
+    container_name: nginx
+    restart: unless-stopped
+    ports:
+      - "80:80"
+    volumes:
+      - ./home/ehautefa/data/wordpress:/var/www/html
+      - ./requirements/nginx/conf/:/etc/nginx/conf.d
+    networks:
+      - app-network
+
+volumes:
+  wordpress:
+  dbdata:
+
+networks:
+  app-network:
+    driver: bridge
+    
