--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -6,4 +6,10 @@ RUN 	apt update -y \
 		&& apt install -y mariadb-server \
 		&& apt clean -y
 
-EXPOSE 9000
+EXPOSE 3306
+
+# init
+ADD ./tools/init.sh /usr/local/bin/init.sh
+RUN chmod 755 /usr/local/bin/init.sh
+
+CMD ["./usr/local/bin/init.sh"]
