--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -6,10 +6,8 @@ RUN 	apt update -y \
 		&& apt install -y nginx \
 		&& apt clean -y
 
-EXPOSE 9000
+# COPY ./conf/nginx.conf /etc/nginx/sites-available/0wordpress
+# RUN ln -s /etc/nginx/sites-available/0wordpress /etc/nginx/sites-enabled/
 
-COPY ./conf/nginx.conf /etc/nginx/sites-available/0wordpress
-RUN ln -s /etc/nginx/sites-available/0wordpress /etc/nginx/sites-enabled/
-
-# run
+CMD ["nginx", "-g", "daemon off;"]
 
