--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,24 +1,20 @@
 server {
-    listen 80;
+        listen 80;
+        listen [::]:80;
 
-	listen [::]:80;
+        server_name localhost
 
-    root /var/www/html;
-    index index.php;
+        index index.php index.html index.htm;
 
-    server_name ehautefa.42.fr;
-   
-    location / {
-        autoindex on;
-		try_files $uri $uri/ /index.php?$args;
-    }
+        root /var/www/html;
 
-    location ~ \.php$ {
-  		fastcgi_split_path_info ^(.+\.php)(/.+)$;
- 		fastcgi_pass wordpress:9000;
- 	 	fastcgi_index index.php;
-  		include fastcgi_params;
-  		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-  		fastcgi_param SCRIPT_NAME $fastcgi_script_name;
-}
+        location / {
+                try_files $uri $uri/ /index.php$is_args$args;
+        }
+
+		location ~ \.php$ {
+        include snippets/fastcgi-php.conf;
+        fastcgi_pass unix:/var/run/php/php7.3-fpm.sock;
+   		}
+
 }
