--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,18 +1,30 @@
-FROM debian:buster
+FROM alpine:3.12
 
 LABEL maintainer="ehautefa@student.42.fr"
 
-RUN 	apt update -q -y \
-		&& apt install -q -y mariadb-server mariadb-client \
-		&& apt autoclean -q -y
+RUN apk add --no-cache \
+	mariadb \
+	mariadb-client \
+	&& mysql_install_db --datadir="/var/lib/mysql"
 
-COPY tools/wordpress.sql /
-COPY tools/50-server.cnf etc/mysql/mariadb.conf.d/
+COPY tools/mariadb.cnf etc/my.cnf.d/mariadb-server.cnf
+
+COPY tools/wordpress.sql .
+
+RUN chown -R mysql /var/lib/mysql
+
+RUN mkdir var/log/mysql
 
 EXPOSE 3306
 
-# init
-ADD ./tools/init.sh /usr/local/bin/init.sh
-RUN chmod 755 /usr/local/bin/init.sh
+# ENV MYSQL_ROOT_PASSWORD "pass"
+# ENV MYSQL_USER "ehautefa"
+# ENV MYSQL_PASSWORD "pass2"
 
-CMD ["./usr/local/bin/init.sh"]
+VOLUME ["/var/lib/mysql"]
+
+COPY ./tools/run.sh /usr/local/bin/run.sh
+RUN chmod 755 /usr/local/bin/run.sh
+
+# CMD ["mysqld_safe"]
+CMD ["/usr/local/bin/run.sh"]
