--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,17 +2,17 @@ version: "3"
 services:
   mysql:
     build: ./requirements/mariadb
-    container_name: MariaDB
-    restart: unless-stopped
+    container_name: mariadb
+    restart: always
     env_file: .env
-    volumes:
-        - ./home/ehautefa/data/mysql:/var/lib/mysql
+    # volumes:
+    #     - ./home/ehautefa/data/mysql:/var/lib/mysql
     environment: 
       MYSQL_DATABASE: wordpress
+    ports:
+      - "3306:3306"
     networks:
       - app-network
-    stdin_open: true
-    tty: true 
   wordpress:
     depends_on: 
       - mysql
@@ -27,11 +27,11 @@ services:
       - WORDPRESS_DB_NAME=wordpress
     volumes:
       - ./home/ehautefa/data/wordpress:/var/www/html
+    links:
+      - mysql
     networks: 
       - app-network
   webserver:
-    depends_on: 
-      - wordpress
     build: ./requirements/nginx
     container_name: nginx
     restart: unless-stopped
@@ -42,6 +42,8 @@ services:
       - ./requirements/nginx/conf/conf.d:/etc/nginx/conf.d
     networks:
       - app-network
+    links:
+      - wordpress
 
 volumes:
   wordpress:
