--- a/srcs/requirements/mariadb/conf/my.cnf
+++ b/srcs/requirements/mariadb/conf/my.cnf
@@ -4,7 +4,7 @@
 
 # This group is read by the server
 [mysqld]
-basedir="/var/lib/mysql"
+basedir=''
 
 # Disabling symbolic-links is recommended to prevent assorted security risks
 symbolic-links=0
