--- a/srcs/requirements/nginx/conf/conf.d/wp.conf
+++ b/srcs/requirements/nginx/conf/conf.d/wp.conf
@@ -8,7 +8,7 @@ server {
 	index index.php;
 
      # document root #
-     root        /home/www/html;
+     root        /var/www/html;
  
      # log files
      access_log  /var/log/nginx/access.log;
