--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -10,7 +10,7 @@ EXPOSE 80
 RUN mkdir /run/nginx
 
 COPY ./conf/nginx.conf /etc/nginx/nginx.conf
-COPY ./conf/conf.d /etc/nginx/conf.d
+COPY ./conf/conf.d/default.conf /etc/nginx/conf.d/default.conf
 
 # config nginx
 # RUN chown -R nginx:nginx /var/www/html
