--- a/srcs/requirements/nginx/conf/conf.d/default.conf
+++ b/srcs/requirements/nginx/conf/conf.d/default.conf
@@ -1,14 +1,23 @@
-server {
-	listen 80 default_server;
-	listen [::]:80 default_server;
+# server {
+        listen                  80;
+        root                    /var/www/html;
+        index                   index.php index.html;
+        server_name             localhost;
+        client_max_body_size    32m;
 
-	# Everything is a 404
-	location / {
-		return 404;
-	}
+        location / {
+    	# First attempt to serve request as file, then
+    	# as directory, then fall back to displaying a 404.
+  		  try_files $uri $uri/ /index.php?$args;
+  		}
 
-	# You may need this to prevent return 404 recursion.
-	location = /404.html {
-		internal;
-	}
-}
+	 	location ~ \.php$ {
+       		try_files $uri =404;
+			fastcgi_split_path_info ^(.+\.php)(/.+)$;
+    		fastcgi_pass wordpress:9000;
+    		fastcgi_index index.php;
+    		include fastcgi_params;
+    		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+   			fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+		}
+    }
