--- a/srcs/requirements/nginx/conf/conf.d/wp.conf
+++ b/srcs/requirements/nginx/conf/conf.d/wp.conf
@@ -4,7 +4,7 @@ server {
   	listen [::]:80;
  
      # virtual server name i.e. domain name #
-     server_name localhost;
+    server_name localhost;
 	index index.php;
 
      # document root #
@@ -23,11 +23,39 @@ server {
   	}
 
 	 location ~ \.php$ {
-    	fastcgi_split_path_info ^(.+\.php)(/.+)$;
-	    # fastcgi_pass wordpress:9000;
-    	fastcgi_index index.php;
-    	include fastcgi_params;
-    	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    	fastcgi_param SCRIPT_NAME $fastcgi_script_name;
- 	 }
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        # NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
+
+        # With php5-cgi alone:
+        #fastcgi_pass 127.0.0.1:9000;
+        # With php5-fpm:
+        fastcgi_pass unix:/var/run/php5-fpm.sock;
+        fastcgi_index index.php;
+        include fastcgi_params;
 }
+}
+
+server {
+
+    listen                  80;
+    root                    /var/www/html;
+    index                   index.php index.html;
+    server_name             localhost;
+    client_max_body_size    32m;
+        
+	location / {
+    	# First attempt to serve request as file, then
+    	# as directory, then fall back to displaying a 404.
+  		try_files $uri $uri/ /index.php?$args;
+  	}
+	location ~ \.php$ {
+#     	fastcgi_split_path_info ^(.+\.php)(/.+)$;
+#   		fastcgi_pass wordpress:9000;
+#     	fastcgi_index index.php;
+#     	include fastcgi_params;
+#     	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+#    		fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+  }
+
+    }
