--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -6,13 +6,13 @@ user nginx;
 worker_processes auto;
 
 # Enables the use of JIT for regular expressions to speed-up their processing.
-pcre_jit on;
+# pcre_jit on;
 
 # Configures default error logger.
 error_log /var/log/nginx/error.log warn;
 
 # Includes files with directives to load dynamic modules.
-include /etc/nginx/modules/*.conf;
+# include /etc/nginx/modules/*.conf;
 
 
 events {
@@ -38,11 +38,11 @@ http {
 	# indicated by the request header Content-Length. If the stated content
 	# length is greater than this size, then the client receives the HTTP
 	# error code 413. Set to 0 to disable.
-	client_max_body_size 1m;
+	# client_max_body_size 1m;
 
 	# Timeout for keep-alive connections. Server will close connections after
 	# this time.
-	keepalive_timeout 65;
+	keepalive_timeout 3000;
 
 	# Sendfile copies data between one FD and other from within the kernel,
 	# which is more efficient than read() + write().
@@ -50,7 +50,7 @@ http {
 
 	# Don't buffer data-sends (disable Nagle algorithm).
 	# Good for sending frequent small bursts of data in real time.
-	tcp_nodelay on;
+	# tcp_nodelay on;
 
 	# Causes nginx to attempt to send its HTTP response head in one packet,
 	# instead of using partial frames.
@@ -61,29 +61,29 @@ http {
 	#ssl_dhparam /etc/ssl/nginx/dh2048.pem;
 
 	# Specifies that our cipher suits should be preferred over client ciphers.
-	ssl_prefer_server_ciphers on;
+	# ssl_prefer_server_ciphers on;
 
 	# Enables a shared SSL cache with size that can hold around 8000 sessions.
-	ssl_session_cache shared:SSL:2m;
+	# ssl_session_cache shared:SSL:2m;
 
 
 	# Enable gzipping of responses.
 	#gzip on;
 
 	# Set the Vary HTTP header as defined in the RFC 2616.
-	gzip_vary on;
+	# gzip_vary on;
 
 	# Enable checking the existence of precompressed files.
 	#gzip_static on;
 
 
 	# Specifies the main log format.
-	log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-			'$status $body_bytes_sent "$http_referer" '
-			'"$http_user_agent" "$http_x_forwarded_for"';
+	# log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+			# '$status $body_bytes_sent "$http_referer" '
+			# '"$http_user_agent" "$http_x_forwarded_for"';
 
 	# Sets the path, format, and configuration for a buffered log write.
-	access_log /var/log/nginx/access.log main;
+	access_log /var/log/nginx/access.log;
 
 
 	# Includes virtual hosts configs.
