--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -12,11 +12,13 @@ RUN mkdir /run/nginx
 COPY ./conf/nginx.conf /etc/nginx/nginx.conf
 COPY ./conf/conf.d/default.conf /etc/nginx/conf.d/default.conf
 
+
 # config nginx
-# RUN chown -R nginx:nginx /var/www/html
+RUN chown -R nginx:nginx /var/www/ \
+	&& chmod -R 755 /var/www/
+
 # COPY ./conf/conf.d/default.conf /etc/nginx/sites-available/
 # RUN ln -s /etc/nginx/sites-available/0wordpress /etc/nginx/sites-enabled/
-
 
 CMD ["nginx", "-g", "daemon off;"]
 
