--- a/srcs/requirements/nginx/conf/conf.d/default.conf
+++ b/srcs/requirements/nginx/conf/conf.d/default.conf
@@ -1,23 +1,25 @@
-# server {
-        listen                  80;
-        root                    /var/www/html;
-        index                   index.php index.html;
-        server_name             localhost;
-        client_max_body_size    32m;
+server {
+  listen 80;
+  listen [::]:80;
+  access_log off;
+  root /var/www/html;
+  index index.php;
+  server_name localhost;
+  server_tokens off;
 
-        location / {
-    	# First attempt to serve request as file, then
-    	# as directory, then fall back to displaying a 404.
-  		  try_files $uri $uri/ /index.php?$args;
-  		}
+  location / {
+    # First attempt to serve request as file, then
+    # as directory, then fall back to displaying a 404.
+    try_files $uri $uri/ /index.php?$args;
+  }
 
-	 	location ~ \.php$ {
-       		try_files $uri =404;
-			fastcgi_split_path_info ^(.+\.php)(/.+)$;
-    		fastcgi_pass wordpress:9000;
-    		fastcgi_index index.php;
-    		include fastcgi_params;
-    		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-   			fastcgi_param SCRIPT_NAME $fastcgi_script_name;
-		}
-    }
+  # pass the PHP scripts to FastCGI server listening on wordpress:9000
+  location ~ \.php$ {
+    fastcgi_split_path_info ^(.+\.php)(/.+)$;
+    fastcgi_pass wordpress:9000;
+    fastcgi_index index.php;
+    include fastcgi_params;
+    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+  }
+}
