essai_src_voolume

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -9,13 +9,16 @@ EXPOSE 80
 
 RUN mkdir /run/nginx
 
-COPY ./conf/nginx.conf /etc/nginx/nginx.conf
-COPY ./conf/conf.d/default.conf /etc/nginx/conf.d/default.conf
+COPY ./conf/nginx.bk.conf /etc/nginx/nginx.conf
+# COPY ./conf/conf.d/default.conf /etc/nginx/conf.d/default.conf
 
 
 # config nginx
-RUN chown -R nginx:nginx /var/www/ \
-	&& chmod -R 755 /var/www/
+RUN mkdir /srcs/
+RUN adduser -D -g 'www' www
+RUN chown -R www:www /srcs/ \
+	&& chown -R www:www /var/lib/nginx/ \
+	&& chmod -R 755 /srcs/
 
 # COPY ./conf/conf.d/default.conf /etc/nginx/sites-available/
 # RUN ln -s /etc/nginx/sites-available/0wordpress /etc/nginx/sites-enabled/
