--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,21 +1,25 @@
 version: "3"
 services:
   mysql:
-    build: ./requirements/mariadb
+    build:
+      context: ./requirements/mariadb
+    tty: true
     container_name: mariadb
     restart: always
     env_file: .env
     volumes:
-        - db-data:/var/lib/mysql
+        - db-data:/var/lib/mysql/
     environment: 
       MYSQL_DATABASE: wordpress
     networks:
       - inception
-      
+
   wordpress:
     depends_on: 
       - mysql
-    build: ./requirements/wordpress
+    tty: true
+    build:
+      context: ./requirements/wordpress
     container_name: wordpress
     restart: unless-stopped
     env_file: .env
@@ -25,28 +29,29 @@ services:
       - WORDPRESS_DB_PASSWORD=$MYSQL_PASSWORD
       - WORDPRESS_DB_NAME=wordpress
     volumes:
-      - wp-data:/var/www/html
-      - db-data:/var/lib/mysql
+      - ./requirements/sources_wp:/srcs/
+      - db-data:/var/lib/mysql/
     networks:
       - inception
 
   webserver:
     depends_on: 
       - wordpress
-    build: ./requirements/nginx
+    tty: true
+    build:
+      context: ./requirements/nginx
     container_name: nginx
     restart: unless-stopped
     ports:
       - "80:80"
     volumes:
-      - wp-data:/var/www/html
+      - ./requirements/sources_wp:/srcs/
     networks:
       - inception
 
 
 volumes:
   db-data:
-  wp-data:
 
 networks:
   inception:
