--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -5,23 +5,25 @@ LABEL maintainer="ehautefa@student.42.fr"
 RUN apk add --no-cache \
 	nginx
  
-EXPOSE 80
+EXPOSE 443
 
 RUN mkdir /run/nginx
 
-COPY ./conf/nginx.bk.conf /etc/nginx/nginx.conf
-# COPY ./conf/conf.d/default.conf /etc/nginx/conf.d/default.conf
+COPY ./conf/nginx.conf /etc/nginx/nginx.conf
 
+
+# COPY ./conf/nginx.conf /etc/nginx/nginx.conf
+# COPY ./conf/conf.d /etc/nginx/conf.d
 
 # config nginx
-RUN mkdir /srcs/
-RUN adduser -D -g 'www' www
-RUN chown -R www:www /srcs/ \
-	&& chown -R www:www /var/lib/nginx/ \
-	&& chmod -R 755 /srcs/
-
+# RUN chown -R nginx:nginx /var/www/html
 # COPY ./conf/conf.d/default.conf /etc/nginx/sites-available/
 # RUN ln -s /etc/nginx/sites-available/0wordpress /etc/nginx/sites-enabled/
 
-CMD ["nginx", "-g", "daemon off;"]
+COPY ./tools/entrypoint.sh /usr/local/bin/entrypoint.sh
+RUN chmod 755 /usr/local/bin/entrypoint.sh
+
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
+
+# CMD ["nginx", "-g", "daemon off;"]
 
