--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -20,7 +20,7 @@ http {
 		listen 					[::]:443;
 
         root                    /var/www/html;
-		error_page				500 502 503 504;
+		# error_page				500 502 503 504;
         index                   index.php index.htm index.html;
         server_name             localhost;
         client_max_body_size    32m;
