--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -21,23 +21,24 @@ http {
 
         root                    /var/www/html;
 		# error_page				500 502 503 504;
-        index                   index.php index.htm index.html;
         server_name             localhost;
         client_max_body_size    32m;
         location / {
     		# First attempt to serve request as file, then
 			# as directory, then fall back to displaying a 404.
 			try_files $uri $uri/ =404;
+       		index                   index.php index.htm index.html;
+
   		}
 
 		location ~ \.php$ {
             try_files $uri =404;
-            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            # fastcgi_split_path_info ^(.+\.php)(/.+)$;
             fastcgi_pass wordpress:9000;
             fastcgi_index index.php;
-            include fastcgi_params;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param PATH_INFO $fastcgi_path_info;
+            # include /etc/nginx/fastcgi.conf;
+            # fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            # fastcgi_param PATH_INFO $fastcgi_path_info;
     	}
 	}
 }
