--- a/srcs/requirements/wordpress/conf/php-fpm.conf
+++ b/srcs/requirements/wordpress/conf/php-fpm.conf
@@ -14,21 +14,21 @@
 ; Pid file
 ; Note: the default prefix is /var
 ; Default Value: none
-; pid = run/php-fpm7.pid
+pid = run/php-fpm7.pid
 
 ; Error log file
 ; If it's set to "syslog", log is sent to syslogd instead of being written
 ; into a local file.
 ; Note: the default prefix is /var
 ; Default Value: log/php7/error.log
-error_log = log/php7/error.log
+error_log = log/php-fpm/error.log
 
 ; syslog_facility is used to specify what type of program is logging the
 ; message. This lets syslogd specify that messages from different facilities
 ; will be handled differently.
 ; See syslog(3) for possible values (ex daemon equiv LOG_DAEMON)
 ; Default Value: daemon
-syslog.facility = daemon
+;syslog.facility = daemon
 
 ; syslog_ident is prepended to every message. If you have multiple FPM
 ; instances running on the same server, you can change the default value
@@ -63,7 +63,7 @@ log_level = debug
 ; interval set by emergency_restart_interval then FPM will restart. A value
 ; of '0' means 'Off'.
 ; Default Value: 0
-;emergency_restart_threshold = 0
+emergency_restart_threshold = 10
 
 ; Interval of time used by emergency_restart_interval to determine when
 ; a graceful restart will be initiated.  This can be useful to work around
@@ -71,7 +71,7 @@ log_level = debug
 ; Available Units: s(econds), m(inutes), h(ours), or d(ays)
 ; Default Unit: seconds
 ; Default Value: 0
-;emergency_restart_interval = 0
+emergency_restart_interval = 10m
 
 ; Time limit for child processes to wait for a reaction on signals from master.
 ; Available units: s(econds), m(inutes), h(ours), or d(ays)
@@ -96,7 +96,7 @@ log_level = debug
 
 ; Send FPM to background. Set to 'no' to keep FPM in foreground for debugging.
 ; Default Value: yes
-daemonize = no
+;daemonize = yes
 
 ; Set open file descriptor rlimit for the master process.
 ; Default Value: system defined value
