--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -1,18 +1,21 @@
 server {
-    listen              443;
-	listen 					[::]:443;
-
+    listen              80;
     server_name         localhost;
 
     location / {
-       	root	/var/www/html;
-       	index	index.php index.html;
+       	root	/srcs/;
+       	index	index.html	index.php;
 
 		location ~ \.php$ {
 			include fastcgi_params;
         	fastcgi_pass wordpress:9000;
+			fastcgi_index  index.php;
         	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     	}
+
+		location = /favicon.ico {
+			log_not_found off;
+		}
   	}
 }
 
