--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -1,6 +1,10 @@
 server {
-    listen              80;
+    listen              443 ssl;
     server_name         localhost;
+
+	include /etc/nginx/mime.types;
+	ssl_certificate /etc/ssl/certs/nginx-selfsigned.csr;
+    ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
 
     location / {
        	root	/srcs/;
