--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -2,8 +2,9 @@ FROM alpine:3.13.4
 
 LABEL maintainer="ehautefa@student.42.fr"
 
-RUN apk add --no-cache \
-	nginx
+RUN apk add --no-cache	\
+	nginx				\
+	openssl
  
 RUN mkdir /run/nginx \
 	&& chown -R nginx:nginx /run/nginx
@@ -13,7 +14,14 @@ COPY ./conf/default.conf /etc/nginx/http.d/default.conf
 RUN mkdir /srcs
 RUN chown -R nginx:nginx /srcs
 
-EXPOSE 80
+#certificat ssl
+RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+	-keyout /etc/ssl/private/nginx-selfsigned.key \
+	-out /etc/ssl/certs/nginx-selfsigned.csr \
+	-subj '/CN=ehautefa.42.fr'
+
+
+EXPOSE 443
 
 CMD ["nginx", "-g", "daemon off;"]
 
