--- a/srcs/.env
+++ b/srcs/.env
@@ -1,4 +1,6 @@
 MYSQL_ROOT_PASSWORD=pass
 MYSQL_USER=ehautefa
 MYSQL_PASSWORD=pass2
+MYSQL_USER_2=ehautefa
+MYSQL_PASSWORD_2=pass2
 COMPOSE_HTTP_TIMEOUT=200
