--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -1,6 +1,6 @@
 server {
     listen              443 ssl;
-    server_name         localhost;
+    server_name         ehautefa.42.fr;
 
 	include /etc/nginx/mime.types;
 	ssl_certificate /etc/ssl/certs/nginx-selfsigned.csr;
@@ -22,4 +22,3 @@ server {
 		}
   	}
 }
-
