--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -2,6 +2,11 @@ FROM alpine:3.13.4
 
 LABEL maintainer="ehautefa@student.42.fr"
 
+COPY ./conf/php-fpm.conf /etc/php7/php-fpm.conf
+COPY ./conf/www.conf /etc/php7/php-fpm.d/www.conf
+COPY ./tools/wp-cli.phar /usr/local/bin/wp
+ADD ./tools/entrypoint.sh /entrypoint.sh
+
 RUN apk add --no-cache	\
 	php					\
 	php-fpm				\
@@ -9,33 +14,21 @@ RUN apk add --no-cache	\
 	php-json			\
 	php-mysqli			\
 	php-curl			\
+	php-gd				\
 	mariadb-client 		\
-	php-iconv
+	php-iconv			\
+	&& adduser -S nginx && addgroup -S nginx \
+	&& mkdir /var/log/php-fpm && touch /var/log/php-fpm/error.log \
+	&& chmod +x /usr/local/bin/wp \
+	&& mkdir /srcs \
+	&& chown -R nginx:nginx /srcs \
+	&& chmod -R 755 /srcs \
+	&& wp core download --path="/srcs/" \
+	&& chmod 755 /entrypoint.sh
 
-EXPOSE 9000
-
-RUN adduser -S nginx && addgroup -S nginx
-
-#CONF
-RUN mkdir /var/log/php-fpm && touch /var/log/php-fpm/error.log
-COPY ./conf/php-fpm.conf /etc/php7/php-fpm.conf
-COPY ./conf/www.conf /etc/php7/php-fpm.d/www.conf
-
-#install wp-cli
-COPY ./tools/wp-cli.phar /usr/local/bin/wp
-RUN chmod +x /usr/local/bin/wp
-
-#volume
-RUN mkdir /srcs
-RUN chown -R nginx:nginx /srcs
-RUN chmod -R 755 /srcs
-RUN wp core download --path="/srcs/"
-
-#wp-config.php
 COPY ./conf/wp-config.php /srcs/wp-config.php
 RUN chmod 644 /srcs/wp-config.php
 
-ADD ./tools/entrypoint.sh /entrypoint.sh
-RUN chmod 755 /entrypoint.sh
+EXPOSE 9000
 
 ENTRYPOINT ["./entrypoint.sh"]
